plugins {
    id 'java'

}

group 'xyz.duncanruns.julti'
version '0.7.0'

tasks.withType(JavaCompile) {
    options.release = 11
}

repositories {
    mavenCentral()
    jcenter()
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'

    implementation 'net.java.dev.jna:jna:5.12.1'
    implementation 'net.java.dev.jna:jna-platform:5.12.1'

    implementation 'org.apache.commons:commons-lang3:3.12.0'
    implementation 'org.apache.commons:commons-text:1.10.0'
    implementation 'commons-io:commons-io:2.11.0'

    implementation 'org.apache.logging.log4j:log4j-api:2.19.0'
    implementation 'org.apache.logging.log4j:log4j-core:2.19.0'

    implementation 'com.google.code.gson:gson:2.10'
    implementation 'com.google.guava:guava:31.1-jre'

    implementation 'com.github.tuupertunut:powershell-lib-java:2.0.0'

    implementation 'com.formdev:flatlaf:2.6'
}

jar {

    duplicatesStrategy(DuplicatesStrategy.EXCLUDE)

    manifest {
        // Thanks to answers from this: https://stackoverflow.com/questions/33020069/how-to-get-version-attribute-from-a-gradle-build-to-be-included-in-runtime-swing
        attributes 'Main-Class': 'xyz.duncanruns.julti.Main',
                'Multi-Release': true,
                'Implementation-Version': version
    }

    from {
        configurations.compileClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
}

test {
    useJUnitPlatform()
}